Make typing input max width 100%, renders correctly on mobile

--- a/frontend/src/components/TypeInputBox.css
+++ b/frontend/src/components/TypeInputBox.css
@@ -3,6 +3,7 @@
     font-weight: 400;
     font-style: normal;
     font-size: 2.2em;
+    max-width: 100%;
 }
 
 .typing-area {
